--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "firebase-setup": "echo 'Please follow the FIREBASE_SETUP.md guide to configure Firebase'"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/slider": "^4.5.7",
+    "@react-native-firebase/app": "^23.2.0",
+    "@react-native-firebase/auth": "^23.2.0",
+    "@react-native-firebase/firestore": "^23.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.17",
@@ -32,6 +36,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
+    "firebase": "^12.2.1",
     "lottie-ios": "^4.5.1",
     "lottie-react": "^2.4.1",
     "lottie-react-native": "7.2.2",
