--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --ios",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "lint": "expo lint",
     "firebase-setup": "echo 'Please follow the FIREBASE_SETUP.md guide to configure Firebase'"
   },
@@ -15,9 +15,9 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/slider": "^4.5.7",
-    "@react-native-firebase/app": "^23.2.0",
+    "@react-native-firebase/analytics": "^23.3.1",
+    "@react-native-firebase/app": "^23.3.1",
     "@react-native-firebase/auth": "^23.2.0",
-    "@react-native-firebase/firestore": "^23.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.17",
@@ -37,7 +37,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
-    "lottie-ios": "^4.5.1",
+    "lottie-ios": "4.5.0",
     "lottie-react": "^2.4.1",
     "lottie-react-native": "7.2.2",
     "react": "19.0.0",
