--- a/app.json
+++ b/app.json
@@ -7,11 +7,14 @@
     "icon": "./assets/images/logo.png",
     "scheme": "velvet",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.ritzakku.velvet",
-      "googleServicesFile": "./ios/GoogleService-Info.plist"
+      "buildNumber": "3",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +22,6 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "googleServicesFile": "./android/app/google-services.json",
       "package": "com.ritzakku.velvet"
     },
     "web": {
@@ -32,6 +34,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "a4c0f087-bcf0-4f38-92dd-adb27403d46c"
+      }
     }
   }
 }
