--- a/eas.json
+++ b/eas.json
@@ -5,28 +5,29 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "ios": {
-        "simulator": true
-      },
-      "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleDebug"
-      }
+      "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      }
+      "distribution": "internal"
     },
     "production": {
-      "android": {
-        "buildType": "app-bundle"
-      }
+      "distribution": "store"
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "aakarshsasi@gmail.com",
+        "ascAppId": "6754314589",
+        "appleTeamId": "D4N62PJYTF"
+      }
+    },
+    "testflight": {
+      "ios": {
+        "appleId": "aakarshsasi@gmail.com",
+        "ascAppId": "6754314589",
+        "appleTeamId": "D4N62PJYTF"
+      }
+    }
   }
 }
