--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/slider": "5.0.1",
-    "@react-native-firebase/analytics": "^23.3.1",
-    "@react-native-firebase/app": "^23.3.1",
-    "@react-native-firebase/auth": "^23.2.0",
-    "@react-native-firebase/firestore": "^23.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -46,15 +42,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
-    "firebase": "^12.2.1",
-    "lottie-ios": "4.5.0",
-    "lottie-react": "^2.4.1",
-    "lottie-react-native": "~7.3.1",
+    "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-iap": "^14.3.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -65,6 +57,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
+    "eas-cli": "^16.24.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
