--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,13 @@
       "distribution": "internal"
     },
     "production": {
-      "distribution": "store"
+      "distribution": "store",
+      "ios": {
+        "credentialsSource": "local"
+      },
+      "android": {
+        "credentialsSource": "local"
+      }
     }
   },
   "submit": {
