--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -2,14 +2,38 @@ name: React Native CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, master]
+    paths-ignore:
+      - "**.md"
+      - "LICENSE"
+      - "docs/**"
   pull_request:
-    branches: [ main ]
+    branches: [main, master]
   workflow_dispatch:
+    inputs:
+      buildType:
+        type: choice
+        description: "Build type to run"
+        options:
+          - ios
+          - android
+          - all
+
+env:
+  EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+  NODE_OPTIONS: --openssl-legacy-provider --max_old_space_size=4096
 
 jobs:
+  check-skip:
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    steps:
+      - name: Skip CI check
+        run: echo "Proceeding with workflow"
+
   # Quality Checks
   quality-checks:
+    needs: check-skip
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,7 +42,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "20"
           cache: 'npm'
 
       - name: Install dependencies
@@ -37,7 +61,7 @@ jobs:
   ios-build:
     runs-on: macos-latest
     needs: quality-checks
-    if: github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')) || (github.event_name == 'workflow_dispatch' && (github.event.inputs.buildType == 'ios' || github.event.inputs.buildType == 'all'))
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -45,7 +69,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "20"
           cache: 'npm'
 
       - name: Install dependencies
@@ -67,7 +91,7 @@ jobs:
           sudo gem install cocoapods
 
       - name: Build iOS app locally (No EAS Minutes)
-        run: eas build --platform ios --profile production --local --non-interactive
+        run: eas build --platform ios --profile production --local --non-interactive --output=./velvet-ios-build.ipa
 
       - name: Submit to TestFlight
         run: eas submit --platform ios --profile testflight --non-interactive
@@ -80,7 +104,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./builds/velvet-ios-build.ipa
+          asset_path: ./velvet-ios-build.ipa
           asset_name: velvet-ios-build.ipa
           asset_content_type: application/octet-stream
 
@@ -88,7 +112,7 @@ jobs:
   android-build:
     runs-on: ubuntu-latest
     needs: quality-checks
-    if: github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')) || (github.event_name == 'workflow_dispatch' && (github.event.inputs.buildType == 'android' || github.event.inputs.buildType == 'all'))
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -96,7 +120,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "20"
           cache: 'npm'
 
       - name: Install dependencies
@@ -126,7 +150,7 @@ jobs:
           echo "PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools" >> $GITHUB_ENV
 
       - name: Build Android APK locally (No EAS Minutes)
-        run: eas build --platform android --profile production --local --non-interactive
+        run: eas build --platform android --profile production --local --non-interactive --output=./velvet-android-build.apk
 
       - name: Upload Android build to GitHub Releases
         uses: actions/upload-release-asset@v1
@@ -134,7 +158,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./builds/velvet-android-build.apk
+          asset_path: ./velvet-android-build.apk
           asset_name: velvet-android-build.apk
           asset_content_type: application/vnd.android.package-archive
 
@@ -142,7 +166,7 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     needs: [ios-build, android-build]
-    if: github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')) || github.event_name == 'workflow_dispatch'
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
