--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -53,7 +53,7 @@ jobs:
         run: npx tsc --noEmit
 
       - name: ESLint check
-        run: npx expo lint
+        run: npx expo lint --max-warnings 100
 
       - name: Prettier format check
         run: npx prettier --check "**/*.{js,jsx,ts,tsx,json,md}"
