Fix EAS CLI package name in GitHub Actions workflow
- Change from @expo/eas-cli to eas-cli (correct package name)
- Fixes npm 404 error in CI/CD builds
- EAS CLI should now install correctly on GitHub runners

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -77,7 +77,7 @@ jobs:
         run: npm ci
 
       - name: Setup EAS CLI
-        run: npm install -g @expo/eas-cli
+        run: npm install -g eas-cli
 
       - name: Login to EAS
         run: eas login --non-interactive
@@ -128,7 +128,7 @@ jobs:
         run: npm ci
 
       - name: Setup EAS CLI
-        run: npm install -g @expo/eas-cli
+        run: npm install -g eas-cli
 
       - name: Login to EAS
         run: eas login --non-interactive
