Fix EAS build credentials configuration
- Change credentialsSource from 'local' to 'remote' for production builds
- Add required cli.appVersionSource field set to 'remote'
- Fixes 'credentials.json does not exist' error in GitHub Actions
- Remote credentials are easier to manage in CI/CD environment
- Maintains local builds while using remote credential management

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 16.0.0"
+    "version": ">= 16.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -13,16 +14,16 @@
     "production": {
       "distribution": "store",
       "ios": {
-        "credentialsSource": "local"
+        "credentialsSource": "remote"
       },
       "android": {
-        "credentialsSource": "local"
+        "credentialsSource": "remote"
       }
     },
     "production-apk": {
       "distribution": "internal",
       "android": {
-        "credentialsSource": "local",
+        "credentialsSource": "remote",
         "buildType": "apk"
       }
     }
