Fix TestFlight submission to use local build instead of EAS build
- Change from --latest (EAS build) to --path ./velvet-ios-build.ipa (local build)
- Now submits the actual local build created in GitHub Actions
- Ensures TestFlight gets the build from GitHub Actions, not EAS servers
- Maintains zero EAS build minutes while submitting correct build

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -96,7 +96,7 @@ jobs:
         run: |
           echo "Attempting TestFlight submission..."
           echo "Note: EAS Submit may be experiencing outages - check https://status.expo.dev/"
-          eas submit --platform ios --profile production --latest --non-interactive || {
+          eas submit --platform ios --profile production --path ./velvet-ios-build.ipa --non-interactive || {
             echo "TestFlight submission failed - this may be due to EAS Submit outage"
             echo "Build completed successfully - you can manually submit later"
             echo "Check EAS Submit status: https://status.expo.dev/"
