--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -28,6 +28,8 @@ env:
   EXPO_APPLE_PASSWORD: ${{ secrets.EXPO_APPLE_PASSWORD }}
   EXPO_TEAM_ID: ${{ secrets.EXPO_TEAM_ID }}
   NODE_OPTIONS: --openssl-legacy-provider --max_old_space_size=4096
+  # Note: REVENUECAT_API_KEY is injected by EAS via eas.json env config
+  # It's stored as an EAS secret (not GitHub secret)
 
 jobs:
   check-skip:
@@ -134,6 +136,7 @@ jobs:
           echo "Files in current directory: $(ls -la)"
           echo "Checking app.json build number:"
           cat app.json | grep -A 5 -B 5 "buildNumber"
+          echo "Note: RevenueCat API key will be injected by EAS from secret"
 
           # Test bundling first
           echo "Testing bundling..."
