--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,30 @@
     "appVersionSource": "local"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": false,
+        "credentialsSource": "remote"
+      },
+      "env": {
+        "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
+      }
+    },
+    "preview": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": false,
+        "credentialsSource": "remote"
+      },
+      "android": {
+        "credentialsSource": "remote"
+      },
+      "env": {
+        "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
+      }
+    },
     "production": {
       "distribution": "store",
       "ios": {
@@ -11,6 +35,9 @@
       },
       "android": {
         "credentialsSource": "remote"
+      },
+      "env": {
+        "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
       }
     }
   },
