fix: add EAS prebuild script to inject RevenueCat API key
- Create eas-build-pre-install.sh to generate .env from EAS secrets
- Add fail-fast validation for REVENUECAT_API_KEY
- Configure prebuildCommand in all EAS build profiles
- Fixes "Invalid API Key" error in TestFlight builds
- Bump build number to 11

--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,8 @@
       },
       "env": {
         "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
-      }
+      },
+      "prebuildCommand": "chmod +x eas-build-pre-install.sh && ./eas-build-pre-install.sh"
     },
     "preview": {
       "distribution": "internal",
@@ -26,19 +27,22 @@
       },
       "env": {
         "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
-      }
+      },
+      "prebuildCommand": "chmod +x eas-build-pre-install.sh && ./eas-build-pre-install.sh"
     },
     "production": {
       "distribution": "store",
       "ios": {
-        "credentialsSource": "remote"
+        "credentialsSource": "remote",
+        "buildConfiguration": "Release"
       },
       "android": {
         "credentialsSource": "remote"
       },
       "env": {
         "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
-      }
+      },
+      "prebuildCommand": "chmod +x eas-build-pre-install.sh && ./eas-build-pre-install.sh"
     }
   },
   "submit": {
