Update build number to 16 and fix RevenueCat API key configuration

--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -28,8 +28,8 @@ env:
   EXPO_APPLE_PASSWORD: ${{ secrets.EXPO_APPLE_PASSWORD }}
   EXPO_TEAM_ID: ${{ secrets.EXPO_TEAM_ID }}
   NODE_OPTIONS: --openssl-legacy-provider --max_old_space_size=4096
-  # Note: REVENUECAT_API_KEY is injected by EAS via eas.json env config
-  # It's stored as an EAS secret (not GitHub secret)
+  # Note: REVENUECAT_API_KEY is loaded from GitHub secrets
+  # It's used to create .env file for local EAS builds
 
 jobs:
   check-skip:
@@ -137,12 +137,6 @@ jobs:
           # Install CocoaPods
           sudo gem install cocoapods
 
-      - name: Increment Build Number
-        run: |
-          chmod +x scripts/increment-build-number.sh
-          ./scripts/increment-build-number.sh
-          echo "Build number incremented for this build"
-
       - name: Create .env file for RevenueCat
         run: |
           echo "Creating .env file with RevenueCat API key..."
@@ -150,6 +144,13 @@ jobs:
           echo "✅ .env file created"
           # Verify it was created
           cat .env | grep -c "REVENUECAT_API_KEY" && echo "✓ REVENUECAT_API_KEY present in .env"
+
+      - name: Set EAS Environment Variable
+        run: |
+          echo "Setting REVENUECAT_API_KEY for EAS build..."
+          export REVENUECAT_API_KEY="${{ secrets.REVENUECAT_API_KEY }}"
+          echo "REVENUECAT_API_KEY=${{ secrets.REVENUECAT_API_KEY }}" >> $GITHUB_ENV
+          echo "✅ EAS environment variable set"
 
       - name: Build iOS Production
         run: |
@@ -162,7 +163,10 @@ jobs:
           echo "Files in current directory: $(ls -la)"
           echo "Checking app.json build number:"
           cat app.json | grep -A 5 -B 5 "buildNumber"
-          echo "Note: RevenueCat API key will be injected by EAS from secret"
+          echo "Verifying .env file exists before build:"
+          ls -la .env || echo "⚠️ .env file not found!"
+          cat .env || echo "⚠️ Cannot read .env file!"
+          echo "Note: RevenueCat API key loaded from GitHub secret and .env file"
 
           # Test bundling first
           echo "Testing bundling..."
