--- a/eas.json
+++ b/eas.json
@@ -40,7 +40,7 @@
         "credentialsSource": "remote"
       },
       "env": {
-        "REVENUECAT_API_KEY": "@REVENUECAT_API_KEY"
+        "REVENUECAT_API_KEY": "$REVENUECAT_API_KEY"
       },
       "prebuildCommand": "chmod +x eas-build-pre-install.sh && ./eas-build-pre-install.sh"
     }
